better scrollbar and page width corrected

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 15px;
+  width: 10px;
 }
 
 *::-webkit-scrollbar-track {
@@ -21,7 +21,7 @@
 *::-webkit-scrollbar-thumb {
   background-color: var(--secondary);
   border-radius: 0px;
-  /* border: 3px solid var(--primary); */
+  border: 1px solid oklch(var(--bc));
 }
 @tailwind components;
 @tailwind utilities;
